# norwegian-dictionary

./: .buildpacks  LICENSE.txt  Makefile  Procfile  README.md  asset-manifest.json  index.html  package-lock.json  package.json  precache-manifest.24e2c62a2cfdadba8b722752dd5abf6d.js  precache-manifest.444ac9be95fccc0f75f083f2e07004f7.js  precache-manifest.4e85ffe33efb037383cc08a3ba3fc92b.js  precache-manifest.5966e88a28dc81f9e5469c5dafc87a08.js  precache-manifest.95ede13bfd82a716154b68e2dade0231.js  precache-manifest.bbec0cb330e99b8ecb18302da9587bef.js  precache-manifest.e2ef89a629594c70c2428648307d065d.js  server.js  service-worker.js  testcafe.js
server/: .env.json  .gitignore  Pipfile  Procfile  fetchFromGoogleTranslate.js  fetchFromWiktionary.js  index.js  logger.js  package-lock.json  package.json  pyproject.toml  samconfig.toml  server.js  template.yaml
server/__mocks__/@google-cloud/: translate.js
server/api/: TextContentParser.js  dom.js  errorHandling.js  googleTranslate.test.js  index.js  ordbok.js  ordbok.test.js  wiktionary.js  wiktionary.test.js
server/migrations/versions/: ac0979a43e93_.py
server/scripts/: deploy  run-local
server/server/: __init__.py  googletranslate.py  ordbok.py  starred.py  utils.py  wiktionary.py
server/src/: google_translate.py  ordbok.py  requirements.txt  utils.py  wiktionary.py
server/src/config/: asgi.py  settings.py  urls.py  wsgi.py
server/src/dictionary/: googletranslate.py  models.py  ordbok.py  serializers.py  starred.py  views.py  (+1 more)
server/tests/: test_google_translate.py  test_ordbok.py  test_wiktionary.py
(+315 files in other folders)
